--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   },
   "homepage": "https://github.com/mihailvasilchenko/jsstarter#readme",
   "devDependencies": {
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
+    "babel-loader": "^8.0.5",
     "browser-sync": "^2.26.3",
     "browser-sync-webpack-plugin": "^2.2.2",
     "eslint": "^5.14.0",
